--- a/index.html
+++ b/index.html
@@ -24,19 +24,25 @@
 
     <p>
       Imagine you have the date range <code>RangeMin</code> to <code>RangeMax</code>. We can visualize this
-      with the following image.
+      with the following image. Each line represents an individual date range (say, a project timeline).
+      The dots represent that element's <code>StartDate</code> and <code>EndDate</code>.
     </p>
 
     <div id="app"></div>
 
     <select id="select" class="custom-select custom-select-lg mt-3 mb-3">
       <option value="reset" selected>Select a Date Range Filter</option>
-      <option value="startsBeforeRangeMin">Start Date is before the RangeMin</option>
-      <option value="startsAfterRangeMin">Start Date is after the RangeMin</option>
-      <option value="startOrEndWithinRange">Start Date or End Date Within Range</option>
-      <option value="startsAndEndsWithinRange">Start Date and End Date within Range</option>
-      <option value="beforeRange">Start Date and End Date is before the Range</option>
-      <option value="afterRange">Start Date and End Date is after the Range</option>
+      <option value="startsBeforeRangeMin">Starts before RangeMin</option>
+      <option value="startsAfterRangeMin">Starts after RangeMin</option>
+      <option value="startsBeforeRangeMax">Starts before RangeMax</option>
+      <option value="startsAfterRangeMax">Starts after RangeMax</option>
+      <option value="endsBeforeRangeMin">Ends before RangeMin</option>
+      <option value="endsAfterRangeMin">Ends after RangeMin</option>
+      <option value="endsBeforeRangeMax">Ends before RangeMax</option>
+      <option value="endsAfterRangeMax">Ends after RangeMax</option>
+      <option value="startsOrEndsInsideRange">Starts or ends inside the Range</option>
+      <option value="startsOrEndsOutsideRange">Starts or ends outside the Range</option>
+      <option value="insideRange">Anything that is inside the Range</option>
       <option value="outsideRange">Anything that is outside the Range</option>
       <option value="involvingRange">Anything that involves the Range</option>
     </select>
@@ -51,8 +57,8 @@
   <code id="filterExpression">Please select a date range filter...</code>
     </pre>
 
-    <h2>Explanation</h2>
-    <p id="explanation">Please select a date range filter...</p>
+    <!-- <h2>Explanation</h2>
+    <p id="explanation">Please select a date range filter...</p> -->
   </div>
 
   <script src="./js/jquery-3.5.1.slim.min.js"></script>
