--- a/index.html
+++ b/index.html
@@ -20,22 +20,30 @@
     <div class="container">
       <h1 class="mt-3">Visualizing Date Ranges</h1>
       <p class="mt-4">
-        Sometimes thinking about date ranges and how to filter on them can be
-        challenging. In this example, I want to share what I found to be pretty
-        helpful with thinking about date ranges.
+        Thinking about date ranges and how to filter on them can be challenging.
+        You might create a filter and realize you have some unexpected items in
+        your results.
+      </p>
+      <p>
+        In this example, I want to share a tip that I found to be pretty helpful
+        when thinking about date ranges.
       </p>
 
       <p>
         Imagine you have the date range <code>RangeMin</code> to
-        <code>RangeMax</code>. We can visualize this with the following image.
-        Each line represents an individual date range (say, a project timeline).
-        The dots represent that element's <code>StartDate</code> and
-        <code>EndDate</code>.
+        <code>RangeMax</code> that you want to work with. We can visualize this
+        with the following way.
       </p>
 
-      <div id="app"></div>
+      <div id="app" class="mb-3"></div>
 
-      <select id="select" class="custom-select custom-select-lg mt-3 mb-3">
+      <p>
+        Each horizontal line represents a record's <code>StartDate</code> and
+        <code>EndDate</code>. Click on the filter below to highlight which
+        records will be included in the results.
+      </p>
+
+      <select id="select" class="custom-select custom-select-lg mb-3">
         <option value="reset" selected>Select a Date Range Filter</option>
         <option value="startsBeforeRangeMin">Starts before RangeMin</option>
         <option value="startsAfterRangeMin">Starts after RangeMin</option>
