--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         your results.
       </p>
       <p>
-        In this example, I want to share a tip that I found to be pretty helpful
-        when thinking about date ranges.
+        So I created an interactive app as a sort of "cheat sheet" for whenever
+        you need to work with date ranges.
       </p>
 
       <p>
